# plasma-pa

./: .git-blame-ignore-revs  .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  config.h.cmake
appiumtests/: CMakeLists.txt  applettest.py
applet/: CMakeLists.txt  DeviceListItem.qml  ListItemBase.qml  Messages.sh  MicrophoneTestView.qml  SmallToolButton.qml  StreamListItem.qml  VolumeSlider.qml  main.qml  main.xml  metadata.desktop  metadata.json
autotests/: CMakeLists.txt  percentvalidatortest.cpp
cmake/: FindCanberraPulse.cmake  FindPulseAudio.cmake  FindSoundThemeFreedesktop.cmake
data/: CMakeLists.txt  disable_kmix.upd  plasmaVolumeDisableKMixAutostart.pl
doc/: CMakeLists.txt  index.docbook
doc/kcontrol/: CMakeLists.txt  index.docbook
po/ar/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ast/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/az/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/bg/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ca/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ca@valencia/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/cs/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/da/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/de/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/el/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/en_GB/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/eo/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/es/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/et/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/eu/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/fi/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/fr/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ga/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/gl/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/he/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/hi/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/hsb/: plasma_applet_org.kde.plasma.volume.po
po/hu/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ia/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/id/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/is/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/it/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ja/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ka/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ko/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/lt/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/lv/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/ml/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/nb/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/nl/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/nn/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/pa/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/pl/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/pt/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
src/: CMakeLists.txt  Messages.sh  abstractvolumebase.h  audioicon.cpp  audioicon.h  canberracontext.cpp  canberracontext.h  card.cpp  card.h  card_p.h  cardport.cpp  cardport.h  client.cpp  client.h  client_p.h  clientview.cpp  clientview.h  clientview.ui  context.cpp  context.h  context_p.h  debug.cpp  debug.h  device.cpp  device.h  device_p.h  devicebase.h  devicenamesourcemodel.cpp  devicenamesourcemodel.h  devicerenamemodel.cpp  devicerenamemodel.h  devicerenamesaver.cpp  devicerenamesaver.h  gconfitem.cpp  gconfitem.h  globalconfig.kcfg  globalconfig.kcfgc  globalconfigskeleton.h  gsettingsitem.cpp  gsettingsitem.h  (+75 more)
src/canberra/: CMakeLists.txt  context.cpp  context.h
src/dbus/: osdService.xml
src/kcm/: CMakeLists.txt  kcm_pulseaudio.desktop  kcm_pulseaudio.json  main.cpp  module.cpp  module.h  module.ui  module.ui.view  resources.qrc
src/kcm/package/: metadata.desktop
src/kcm/package/contents/code/: icon.js
src/kcm/package/contents/ui/: Advanced.qml  Applications.qml  CardListItem.qml  CardView.qml  Cards.qml  DefaultDeviceButton.qml  DeviceComboBox.qml  DeviceListItem.qml  DeviceView.qml  Devices.qml  Header.qml  ListItemSeperator.qml  MuteButton.qml  PulseView.qml  SinkInputListItem.qml  SinkInputView.qml  SinkInputs.qml  SinkListItem.qml  SinkTest.qml  Sinks.qml  SourceOutputView.qml  StreamListItem.qml  StreamView.qml  ThemedScrollView.qml  VolumeControlsConfig.qml  VolumeSlider.qml  main.qml
src/kcm/qml/: CardListItem.qml  Cards.qml  SinkInputListItem.qml  SinkInputs.qml  SinkListItem.qml  Sinks.qml  ThemedScrollView.qml
src/kcm/ui/: CardListItem.qml  ContextBrokenOverlay.qml  ContextBrokenPage.qml  DeviceComboBox.qml  DeviceListItem.qml  MuteButton.qml  RenameDevices.qml  StreamListItem.qml  VolumeControlsConfig.qml  VolumeSlider.qml  icon.js  main.qml
src/kded/: CMakeLists.txt  KDBusPropertiesChangedAdaptor.cpp  KDBusPropertiesChangedAdaptor.h  audioshortcutsservice.cpp  audioshortcutsservice.h  audioshortcutsservice.json  audioshortcutsservice.json.license  mutedmicrophonereminder.cpp  mutedmicrophonereminder.h
src/qml/: CMakeLists.txt  ClientIcon.qml  PulseObjectFilterModel.qml  dbusinterface.cpp  dbusinterface.h  globalactioncollection.cpp  globalactioncollection.h  globalconfig.kcfg  globalconfig.kcfgc  globalconfigskeleton.h  globalservice.cpp  globalservice.h  listitemmenu.cpp  listitemmenu.h  microphoneindicator.cpp  microphoneindicator.h  org.freedesktop.DBus.Properties.xml  plugin.cpp  plugin.h  preferreddevice.h  pulseobjectfiltermodel.cpp  pulseobjectfiltermodel.h  qmldir  volume.js  volumefeedback.cpp  volumefeedback.h  volumeosd.cpp  volumeosd.h
src/qml/dbus/: osdService.xml
(+72 files in other folders)
